Swagger za ReviewController
